[tool.poetry]
name = "rosemary"
version = "1.8.0"
description = ""
authors = ["Chris Odi <chris.odi76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2"
sqlalchemy = "^2"
asyncpg = "^0.29.0"
asyncio = "^3"
logger = "^1"
importlib = "^1"
setuptools = "^69"
alembic = "^1"
greenlet = "^3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
